apps/centralino/centralino-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: centralino-external
  namespace: centralino
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: centralino-forward-auth@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: centralino.${PUBLIC_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: centralino
                port:
                  number: 80
